crates/parser/src/snapshots/parser__tests__parse_inline_err@0146_define_prefix_no_value.ath.snap
---
source: crates/parser/src/tests.rs
description: "(define foo)\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0146_define_prefix_no_value.ath
---
PREFIX_DEFINE
  L_PAREN "("
  DEFINE_KW "define"
  WHITESPACE " "
  NAME
    IDENT "foo"
  R_PAREN ")"
  WHITESPACE "\n"
error 11: expected value for define

