crates/parser/src/snapshots/parser__tests__parse_inline_err@0161_prefix_check_clause_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(check (B ))\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0161_prefix_check_clause_no_expr.ath
---
PREFIX_CHECK_EXPR
  L_PAREN "("
  CHECK_KW "check"
  WHITESPACE " "
  CHECK_CLAUSE
    L_PAREN "("
    IDENT_EXPR
      NAME_REF
        IDENT "B"
    WHITESPACE " "
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"
error 9: Expected to find a body for the prefix check clause

