crates/parser/src/snapshots/parser__tests__parse_inline_err@0164_infix_expand_input_dir_no_third_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "expand-input foo, bar\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0164_infix_expand_input_dir_no_third_phrase.ath
---
EXPAND_INPUT_DIR
  EXPAND_INPUT_KW "expand-input"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  COMMA ","
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE "\n"
error 21: expected input expansion

