crates/parser/src/snapshots/parser__tests__parse_inline_err@0166_define_sort_dir_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "define-sort Foo :=\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0166_define_sort_dir_no_phrase.ath
---
DEFINE_SORT_DIR
  DEFINE_SORT_KW "define-sort"
  WHITESPACE " "
  NAME
    IDENT "Foo"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE "\n"
error 18: expected phrase for sort definition

