crates/parser/src/snapshots/parser__tests__parse_inline_err@0167_define_block_empty.ath.snap
---
source: crates/parser/src/tests.rs
description: "(define (foo a b) := )\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0167_define_block_empty.ath
---
PREFIX_DEFINE_BLOCKS
  L_PAREN "("
  DEFINE_KW "define"
  WHITESPACE " "
  PREFIX_DEFINE_BLOCK
    DEFINE_PROC
      L_PAREN "("
      NAME
        IDENT "foo"
      WHITESPACE " "
      NAME
        IDENT "a"
      WHITESPACE " "
      NAME
        IDENT "b"
      R_PAREN ")"
    WHITESPACE " "
    COLON_EQ ":="
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 20: expected definition value

